--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="status_no_face">No face detected</string>
     <string name="status_camera_permission">Camera permission required</string>
     <string name="face_size_format">Face: %d%%</string>
+    <string name="settings">Settings</string>
+    <string name="ask_ai_bar_hint">ask ai anything...</string>
+    <string name="ask_ai">Ask Ai</string>
 </resources>
