--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,27 @@
     <string name="settings">Settings</string>
     <string name="ask_ai_bar_hint">ask ai anything...</string>
     <string name="ask_ai">Ask Ai</string>
+    <string name="person_name_1">Davian Allen</string>
+    <string name="person_name_2">Isaac Osborne</string>
+    <string name="person_name_3">Tobias Huber</string>
+    <string name="score_1">12,523</string>
+    <string name="score_2">4,607</string>
+    <string name="score_3">3,245</string>
+    <string name="current_streak_text">current - 11</string>
+    <string name="highest_streak_text">highest - 26</string>
+    <string name="current_streak_number">11</string>
+    <string name="this_month">this month</string>
+    <string name="this_week">this week</string>
+    <string name="so_far">so far</string>
+    <string name="leaderboard">leaderboard</string>
+    <string name="view_more">View More</string>
+    <string name="global_push_ups">global push-ups</string>
+    <string name="global_push_ups_count">240,846</string>
+    <string name="start">Start</string>
+    <string name="total_push_ups_today">total push-ups\ntoday</string>
+    <string name="total_push_ups_today_count">46</string>
+    <string name="this_week_count">125</string>
+    <string name="this_month_count">525</string>
+    <string name="so_far_count">2.54k</string>
+    <string name="top_bar_title">PUSH-UPS</string>
 </resources>
