feat: Revamp MainActivity UI with new controls and styling
This commit introduces a significant redesign of the `MainActivity` UI for a more modern and user-friendly experience, along with new functionalities.

**Key UI Changes:**
- **Layout Restructure:**
    - Replaced the central `LinearLayout` with a `ConstraintLayout` for more flexible element positioning.
    - `Push-up Count`: Now more prominent with a larger font size (`128sp`, "Special Gothic Expanded Bold") and a "Rep X" label above it.
    - `Status Text`: Styled with "Special Gothic Semibold" and positioned below the push-up count.
    - `Camera Preview`: Resized to `116dp x 129dp` and uses `light_grey_85` for the "Face: X%" text background.
    - `Toggles`: Camera and Feedback toggles are now vertically aligned on the left, below a new "Back" button.
- **New UI Elements:**
    - **Back Button:** A "Back" button with an arrow icon (`arrow_left.xml`) and text, styled with `very_light_grey` background, added to the top-left.
    - **Timer Display:** A `CardView` showing a sample timer (`00:00.00`) with a timer icon (`timer.xml`) is now present below the status text.
    - **Total Count Display:** A `CardView` shows "Total" and the current count, positioned above the bottom action buttons.
    - **Action Buttons (Bottom):**
        - `Reset Button`: Text-based button with `very_light_grey` background.
        - `Play/Pause Button`: Circular `CardView` with a play icon (`play.xml`, initially). Will likely toggle to a pause icon (`pause.xml`). Tinted grey.
        - `Finish Button`: Circular `CardView` with a checkmark icon (`check.xml`) and black background.
- **Styling & Theming:**
    - Consistent use of `CardView` with rounded corners and no elevation for buttons and information displays.
    - Leverages custom fonts ("Special Gothic" variations) for text elements.
    - New color usage for backgrounds (`very_light_grey`, `light_grey_85`) and icons.
- **Icons:**
    - Added new vector drawables: `arrow_le

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,13 @@
     <string name="this_month_count">525</string>
     <string name="so_far_count">2.54k</string>
     <string name="top_bar_title">PUSH-UPS</string>
+    <string name="finish">Finish</string>
+    <string name="play_pause">Play/Pause</string>
+    <string name="reset">Reset</string>
+    <string name="timer">Timer</string>
+    <string name="timer_sample_duration">00:00.00</string>
+    <string name="_0">0</string>
+    <string name="rep_1">Rep 1</string>
+    <string name="face_0">Face: 0%</string>
+    <string name="back">Back</string>
 </resources>
