feat: Implement Settings screen
This commit introduces a settings screen (`SettingsFragment`) accessible from the home screen.

**Key Changes:**

- **Settings Screen UI (`fragment_settings.xml`):**
    - Creates a scrollable layout for settings options.
    - Includes a header with a back button, rate app icon, and share app icon.
    - Displays user information (avatar, name, email - placeholder).
    - Divides settings into "General" and "Support" categories.
    - **General Options:**
        - Account Information
        - Personalize
        - Appearance
        - Notifications
    - **Support Options:**
        - Report an issue
        - Contact us
        - Privacy policy
        - Terms & conditions
    - Adds a "Logout" button.
    - Uses new vector drawables for various setting items and actions.
- **Navigation:**
    - Adds a `SettingsFragment` to `navigation.xml`.
    - Implements navigation from `HomeActivity` to `SettingsFragment` when the settings icon is clicked.
    - Uses slide and fade animations for fragment transitions (`slide_in_right.xml`, `slide_out_right.xml`, `fade_in.xml`, `fade_out.xml`, `zoom_in.xml`).
    - `SettingsFragment.kt` handles the back button press to pop the fragment from the back stack.
- **New String Resources:**
    - Adds string resources for all text in the settings screen, including titles, item labels, and content descriptions.
- **New Drawable Resources:**
    - `account_information.xml`
    - `arrow_right.xml`
    - `contact_us.xml`
    - `notifications.xml`
    - `personalize.xml`
    - `privacy_policy.xml`
    - `report_an_issue.xml`
    - `share.xml`
    - `star.xml`
    - `terms.xml`
- **Dependencies:**
    - Adds `androidx.navigation:navigation-fragment-ktx` and `androidx.navigation:navigation-ui-ktx` for fragment navigation.
- **Home Screen (`HomeActivity.kt`, `activity_home.xml`):**
    - Adds an ID (`settingsButton`) to the settings `ImageButton`.
    - Implements `OnClickListener` for `settingsButton` to na

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="status_no_face">No face detected</string>
     <string name="status_camera_permission">Camera permission required</string>
     <string name="face_size_format">Face: %d%%</string>
-    <string name="settings">Settings</string>
+    <string name="settings">settings</string>
     <string name="ask_ai_bar_hint">ask ai anything...</string>
     <string name="ask_ai">Ask Ai</string>
     <string name="person_name_1">Davian Allen</string>
@@ -43,4 +43,20 @@
     <string name="rep_1">Rep 1</string>
     <string name="face_0">Face: 0%</string>
     <string name="back">Back</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="rate_us">Rate us</string>
+    <string name="share_app">Share app</string>
+    <string name="person_email_1">davianallen1997@yahoo.com</string>
+    <string name="general">General</string>
+    <string name="account_information">Account Information</string>
+    <string name="personalize">Personalize</string>
+    <string name="appearance">Appearance</string>
+    <string name="notifications">Notifications</string>
+    <string name="support">Support</string>
+    <string name="report_an_issue">Report an issue</string>
+    <string name="contact_us">Contact us</string>
+    <string name="privacy_policy">Privacy policy</string>
+    <string name="terms_conditions"><![CDATA[Terms & conditions]]></string>
+    <string name="logout">logout</string>
 </resources>
