feat: Implement Dashboard and Navigation with Fragments
This commit introduces a fragment-based navigation structure and implements the Dashboard screen as a fragment.

Key changes:
- **Navigation Graph (`navigation.xml`):**
    - Set `DashboardFragment` as the `startDestination`.
    - Defined actions for navigation:
        - `DashboardFragment` to `SettingsFragment` (`action_dashboardFragment_to_settingsFragment`).
        - `SettingsFragment` to `PersonalizeFragment` (`action_settingsFragment_to_personalizeFragment`).
    - Added custom animations (slide in/out, fade in/out) for transitions.
- **HomeActivity (`HomeActivity.kt`):**
    - Now hosts a `FragmentContainerView` (`nav_host_fragment`) that uses the `navigation.xml` graph.
    - Removed the direct layout inflation and logic for heatmap generation and button clicks as these are now handled by `DashboardFragment`.
- **DashboardFragment (`DashboardFragment.kt` & `fragment_dashboard.xml`):**
    - New fragment that replicates the UI and functionality previously in `HomeActivity`.
    - Layout (`fragment_dashboard.xml`) is identical to the previous `activity_home.xml`.
    - Handles "Start" button click to launch `MainActivity`.
    - Handles "Settings" button click to navigate to `SettingsFragment` using `findNavController()`.
    - Generates the sample heatmap.
- **SettingsFragment (`SettingsFragment.kt`):**
    - Modified to use `_binding` for view binding and `findNavController()` for navigation.
    - Added click listener for "Personalize" which navigates to `PersonalizeFragment`.
    - Removed `ViewCompat.setOnApplyWindowInsetsListener` as this is likely handled at the activity level.
- **PersonalizeFragment (`PersonalizeFragment.kt` & `fragment_personalize.xml`):**
    - New fragment with a basic layout including a "Back" button and a "Personalize" title.
    - Implements back button press handling using `requireActivity().onBackPressedDispatcher` or `parentFragmentManager.popBackStack()` for compatibi

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="status_camera_permission">Camera permission required</string>
     <string name="face_size_format">Face: %d%%</string>
     <string name="settings">settings</string>
-    <string name="ask_ai_bar_hint">ask ai anything...</string>
+    <string name="ask_ai_bar_hint">ask ai anything…</string>
     <string name="ask_ai">Ask Ai</string>
     <string name="person_name_1">Davian Allen</string>
     <string name="person_name_2">Isaac Osborne</string>
@@ -57,4 +57,5 @@
     <string name="privacy_policy">Privacy policy</string>
     <string name="terms_conditions"><![CDATA[Terms & conditions]]></string>
     <string name="logout">logout</string>
+    <string name="personalize1">personalize</string>
 </resources>
