feat: Implement settings for camera card and feedback visibility
This commit introduces a "Personalize" screen where users can toggle the visibility of the camera preview card and enable/disable counter feedback (vibration/sound) on the main push-up counter screen.

Key changes:
- **Personalize Screen (`PersonalizeFragment.kt`, `fragment_personalize.xml`):**
    - Added a new "Personalize" screen accessible from the home screen (navigation not yet implemented in this commit).
    - Includes two `MaterialSwitch` toggles:
        - "Show camera card": Controls visibility of the camera preview.
        - "Counter feedback": Controls vibration/sound feedback for push-ups.
    - Displays descriptive text and visuals (a new `show_camera_card_thumb.png` and `show_camera_card_arrow.xml` drawable) to explain the camera card setting.
    - Persists toggle states using `SharedPreferences`.
- **Constants (`Constants.kt`):**
    - Added a new `Constants.kt` file to store `SharedPreferences` keys (`PREFS_NAME`, `KEY_SHOW_CAMERA`, `KEY_COUNTER_FEEDBACK`).
- **MainActivity (`MainActivity.kt`):**
    - Reads the saved preferences for camera card visibility and counter feedback on startup.
    - Shows/hides the camera card (`cameraCard`) based on the "Show camera card" preference.
    - Enables/disables push-up feedback (sound/vibration) based on the "Counter feedback" preference.
    - Removed the old inline `cameraToggle` and `feedbackToggle` from `activity_main.xml` and their direct listeners in `MainActivity.kt`.
- **Layout (`activity_main.xml`):**
    - Removed the `LinearLayout` container (`toggleContainer`) that previously held the camera and feedback toggles.
- **String Resources (`strings.xml`):**
    - Added new strings for the Personalize screen:
        - `show_camera_card`
        - `a_camera_preview_to_just_n_make_sure_your_pushups_nare_getting_counted_correctly`
        - `turn_this_on_to_get_vibration_feedback_on_each_push_up_counts`
        - `counter_feedback`
- **D

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,8 @@
     <string name="terms_conditions"><![CDATA[Terms & conditions]]></string>
     <string name="logout">logout</string>
     <string name="personalize1">personalize</string>
+    <string name="show_camera_card">Show camera card</string>
+    <string name="a_camera_preview_to_just_n_make_sure_your_pushups_nare_getting_counted_correctly">A camera preview to just\n“make sure” your pushups\nare getting counted correctly.</string>
+    <string name="turn_this_on_to_get_vibration_feedback_on_each_push_up_counts">Turn this “On” to get vibration feedback on each push-up counts</string>
+    <string name="counter_feedback">Counter feedback</string>
 </resources>
