refactor: Use string resource for "Total" text
This commit replaces the hardcoded "Total" string in `activity_main.xml` with a string resource `@string/total`.

- Added `<string name="total">Total</string>` to `app/src/main/res/values/strings.xml`.
- Updated the `TextView` in `app/src/main/res/layout/activity_main.xml` to use `android:text="@string/total"`.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,5 @@
     <string name="a_camera_preview_to_just_n_make_sure_your_pushups_nare_getting_counted_correctly">A camera preview to just\n“make sure” your pushups\nare getting counted correctly.</string>
     <string name="turn_this_on_to_get_vibration_feedback_on_each_push_up_counts">Turn this “On” to get vibration feedback on each push-up counts</string>
     <string name="counter_feedback">Counter feedback</string>
+    <string name="total">Total</string>
 </resources>
