--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,4 +63,8 @@
     <string name="turn_this_on_to_get_vibration_feedback_on_each_push_up_counts">Turn this “On” to get vibration feedback on each push-up counts</string>
     <string name="counter_feedback">Counter feedback</string>
     <string name="total">Total</string>
+    <string name="notifications1">notifications</string>
+    <string name="all_notifications">All notifications</string>
+    <string name="turn_this_on_to_receive_all_types_of_notifications">Turn this “On” to receive all types of notifications</string>
+    <string name="version_x_x_x_x">Version - x.x.x(x)</string>
 </resources>
