feat: Add Account Information screen
This commit introduces a new "Account Information" screen accessible from the Settings page.

Key changes:
- **AccountFragment (`AccountFragment.kt`, `fragment_account.xml`):**
    - New fragment to display user account details (Name and Email).
    - Includes a back button for navigation.
    - Displays a placeholder profile picture (`person3.png`) and user information (`person_name_1`, `person_email_1`).
    - Uses a custom background shape (`profile_card.xml`) for the information card.
- **Navigation (`navigation.xml`):**
    - Added a new fragment destination for `AccountFragment`.
    - Added a navigation action (`action_settingsFragment_to_accountFragment`) from `SettingsFragment` to `AccountFragment` with slide and fade animations.
- **SettingsFragment (`SettingsFragment.kt`, `fragment_settings.xml`):**
    - Added an "Account Information" item that navigates to the new `AccountFragment`.
    - Assigned `android:id="@+id/account_information"` to the "Account Information" LinearLayout.
- **Drawable (`profile_card.xml`):**
    - Added a new vector drawable for the profile card background with a custom shape.
- **String Resources (`strings.xml`):**
    - Added the string `account_information1` for the screen title.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,5 @@
     <string name="choose_a_theme">Choose a theme</string>
     <string name="light">Light</string>
     <string name="dark">Dark</string>
+    <string name="account_information1">account information</string>
 </resources>
