refactor: Use string resources for Account screen labels
This commit updates the `AccountFragment` layout to use string resources for the "Name" and "Email" labels instead of hardcoded text.

- Added `<string name="name">Name</string>` and `<string name="email">Email</string>` to `app/src/main/res/values/strings.xml`.
- Updated `TextView` elements in `app/src/main/res/layout/fragment_account.xml` to use `@string/name` and `@string/email`.
- Removed unused imports from `AccountFragment.kt`.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,6 @@
     <string name="light">Light</string>
     <string name="dark">Dark</string>
     <string name="account_information1">account information</string>
+    <string name="name">Name</string>
+    <string name="email">Email</string>
 </resources>
