feat: Implement onboarding and Google Sign-In flow
This commit introduces a multi-screen onboarding experience for new users, culminating in an option to sign in with Google.

Key changes:

- **Onboarding Screens (`OnBoardingFragment.kt`, `fragment_on_boarding.xml`, `item_onboarding_screen.xml`):**
    - Implemented a `ViewPager2` to display a series of onboarding screens.
    - Each screen (`OnboardingScreen.kt`) consists of a title, body text, and an image (`onboarding_image_1.png` to `onboarding_image_4.png`).
    - An `OnboardingAdapter.kt` manages the display of these screens.
    - A `DotsIndicator` (`com.tbuonomo:dotsindicator`) shows the current screen progress.
    - "Skip" button allows users to jump to the last onboarding screen.
    - "Next" button advances through screens; on the final screen, it changes to a "check" icon and triggers the Google Sign-In bottom sheet.
- **Google Sign-In Bottom Sheet (`GoogleSignInBottomSheet.kt`, `bottom_sheet_google_signin.xml`):**
    - A custom `BottomSheetDialogFragment` prompts users to "Continue with Google".
    - Uses a custom style (`CustomBottomSheetDialog`) with slide-in/out animations (`slide_in_bottom.xml`, `slide_out_bottom.xml`) and a curved top background (`bottom_sheet_curve_card.xml`).
    - The "Continue with Google" button includes the Google logo (`google.png`).
    - Upon clicking the Google Sign-In button, the user is navigated to the `DashboardFragment`.
- **Navigation (`navigation.xml`):**
    - Set `OnBoardingFragment` as the new start destination.
    - Added a navigation action from `OnBoardingFragment` to `DashboardFragment`, configured to pop `OnBoardingFragment` from the back stack.
- **String Resources (`strings.xml`):**
    - Added new strings for onboarding titles, body text, "Skip", "Next", and "Continue with Google".
- **Styles (`styles.xml`):**
    - Defined styles for the custom bottom sheet, including animations and shape appearance.
- **Build Configuration (`build.gradle.kts`):**
 

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,4 +74,17 @@
     <string name="account_information1">account information</string>
     <string name="name">Name</string>
     <string name="email">Email</string>
+    <string name="skip">Skip</string>
+    <string name="next">Next</string>
+    
+    <!-- Onboarding strings -->
+    <string name="onboarding_title_1">track your push-ups.\nanytime. anywhere.</string>
+    <string name="onboarding_body_1">Build strength and consistency with a\nsmart push-up counter designed to\nkeep you motivated.</string>
+    <string name="onboarding_title_2">stay consistent.\nsmash your goals.</string>
+    <string name="onboarding_body_2">Daily tracking, streaks, and monthly\nstats help you stay accountable\nand crush your fitness journey.</string>
+    <string name="onboarding_title_3">you vs\nthe world.</string>
+    <string name="onboarding_body_3">Compete with friends, climb the\nleaderboard, and join a\nglobal push-up movement.</string>
+    <string name="onboarding_title_4">ready to\nbegin?</string>
+    <string name="onboarding_body_4">Sign in with Google to save your\nprogress and join the community.</string>
+    <string name="continue_with_google">Continue with Google</string>
 </resources>
