feat: Integrate Firebase Google Sign-In and display user info
This commit integrates Firebase Google Sign-In functionality and updates the UI to display signed-in user information on the Settings and Account screens.

Key Changes:

- **Google Sign-In Implementation:**
    - Added `GoogleAuthUiClient.kt` to handle Google Sign-In logic using Firebase Auth and Google Identity Services.
    - Added `SignInResult.kt`, `SignInState.kt`, and `SignInViewModel.kt` to manage the sign-in state and results.
    - Implemented Google Sign-In flow in `OnBoardingFragment.kt`:
        - Initializes `GoogleAuthUiClient` and `SignInViewModel`.
        - Checks if a user is already logged in and navigates to the dashboard if true.
        - Launches the Google Sign-In intent when the "Continue with Google" button is clicked in the bottom sheet.
        - Handles the sign-in result, displays a welcome toast, and navigates to the dashboard on success, or shows an error toast on failure.
    - Added `default_web_client_id` string resource.
    - Added necessary dependencies for Firebase Auth, Google Identity Services, and Glide in `build.gradle.kts` and `libs.versions.toml`.
    - Added `google-services.json` to `.gitignore`.
    - Added Google Services plugin to project and app `build.gradle.kts`.

- **Display User Information:**
    - In `SettingsFragment.kt`:
        - Fetches signed-in user data (name, email, profile picture URL) using `GoogleAuthUiClient`.
        - Updates `userName`, `userEmail` TextViews and loads the profile picture into `userImage` ImageView using Glide.
        - Implemented logout functionality: signs out the user and navigates back to the `OnBoardingFragment`.
    - In `AccountFragment.kt`:
        - Fetches and displays the signed-in user's name, email, and profile picture similarly to `SettingsFragment`.
    - Updated IDs for user info views in `fragment_settings.xml` and `fragment_account.xml` for clarity (`userImage`, `userName`, `userEmail`).

- **Naviga

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Push Counter</string>
+    <string name="default_web_client_id">975598957627-eskfiukf0kj475nafdv2pp70vrdn96tn.apps.googleusercontent.com</string>
     <string name="status_ready">Ready to detect push-ups</string>
     <string name="status_go_up">Go up!</string>
     <string name="status_great">Great! Go down for next rep</string>
