feat: Implement Workout Setup Bottom Sheet for choosing custom Rep Count and Rest Time
This commit introduces a "Workout Setup" dialog that allows users to configure the number of reps and rest time before starting a workout.

Key changes:
- **WorkoutSetupDialog (`WorkoutSetupDialog.kt`, `dialog_workout_setup.xml`):**
    - Created a new `BottomSheetDialogFragment` for workout configuration.
    - Allows users to input "Total Reps" via a `TextInputEditText`.
    - Implemented `NumberPicker`s for selecting "Rest Time" in minutes and seconds.
    - Includes "Cancel" and "Start Workout" buttons.
    - Saves the configured total reps and rest time to SharedPreferences (`KEY_TOTAL_REPS`, `KEY_REST_TIME`).
    - Validates input for total reps.
- **DashboardFragment Integration (`DashboardFragment.kt`):**
    - The "Start Workout" button now opens the `WorkoutSetupDialog`.
    - Upon confirming settings in the dialog, `CounterActivity` is launched with the user-defined `totalReps` and `restTimeMs` passed as Intent extras.
    - Default values for total reps and rest time are retrieved from SharedPreferences when the dialog is shown.
- **CounterActivity (`CounterActivity.kt`):**
    - Modified to receive `totalReps` and `restTimeMs` from Intent extras, overriding the previous hardcoded values.
    - The `customRestMs` variable is now used for the rest timer, initialized from the intent.
- **String Resources (`strings.xml`):**
    - Added new strings for the workout setup dialog labels, hints, and validation messages.
- **Styles (`styles.xml`):**
    - Updated `CustomBottomSheetDialog` and `CustomShapeAppearanceBottomSheet` parent styles to `Material3` equivalents.
- **Layout Resources:**
    - Added `dialog_workout_setup.xml` for the dialog layout.
    - Added `text_input_highlight.xml` color selector for `TextInputLayout` focus state.
- **Utility Function (`Extensions.kt`):**
    - Added `Int.formatTwoDigits()` extension function to format numbers with leading zeros for th

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,4 +88,16 @@
     <string name="onboarding_title_4">ready to\nbegin?</string>
     <string name="onboarding_body_4">Sign in with Google to save your\nprogress and join the community.</string>
     <string name="continue_with_google">Continue with Google</string>
+    
+    <!-- Workout Setup Dialog -->
+    <string name="setup_workout">Setup Workout</string>
+    <string name="total_reps">Total Reps</string>
+    <string name="enter_total_reps">Enter total reps</string>
+    <string name="rest_time">Rest Time</string>
+    <string name="minutes">Minutes</string>
+    <string name="seconds">Seconds</string>
+    <string name="cancel">Cancel</string>
+    <string name="start_workout">Start Workout</string>
+    <string name="please_enter_total_reps">Please enter total reps</string>
+    <string name="please_enter_valid_reps">Please enter a valid number of reps</string>
 </resources>
