feat: Added option to set default rep count and rest time in settings
This commit introduces options in the "Personalize" screen to set default values for total rep count and rest time.

Key changes:
- **Personalize Screen (`PersonalizeFragment.kt`, `fragment_personalize.xml`):**
    - Added "Total Reps" and "Rest Time" sections.
    - Users can tap on these sections to open a dialog for setting the respective values.
    - The selected values are saved to SharedPreferences (`KEY_TOTAL_REPS`, `KEY_REST_TIME`).
    - The displayed rep count and rest time update dynamically.
    - Rest time is displayed in `MM:SS` format.
- **Workout Setup Dialog (`WorkoutSetupDialog.kt`, `dialog_workout_setup.xml`):**
    - Modified to support different modes based on an integer flag:
        - `flag = 0` (default): Shows both rep count and rest time inputs (for workout setup).
        - `flag = 1`: Shows only rep count input (for setting default reps).
        - `flag = 2`: Shows only rest time input (for setting default rest time).
    - The "Start Workout" button text changes to "Apply" when setting default values.
    - The visibility of input fields (total reps, rest time) changes based on the flag.
- **Dashboard (`DashboardFragment.kt`):**
    - Updated `WorkoutSetupDialog` instantiation to pass `0` as the flag, maintaining its original behavior for workout setup.
- **String Resources (`strings.xml`):**
    - Added strings for "Apply", new descriptive texts for setting default reps and rest time, and a colon separator for the time picker.
    - Changed `timer_sample_duration` from `00:00.00` to `00:00`.
- **Layout Adjustments:**
    - Added IDs to TextViews and Layouts in `dialog_workout_setup.xml` for better control from `WorkoutSetupDialog.kt`.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="play_pause">Play/Pause</string>
     <string name="reset">Reset</string>
     <string name="timer">Timer</string>
-    <string name="timer_sample_duration">00:00.00</string>
+    <string name="timer_sample_duration">00:00</string>
     <string name="_0">0</string>
     <string name="rep_1">Rep 1</string>
     <string name="face_0">Face: 0%</string>
@@ -100,4 +100,8 @@
     <string name="start_workout">Start Workout</string>
     <string name="please_enter_total_reps">Please enter total reps</string>
     <string name="please_enter_valid_reps">Please enter a valid number of reps</string>
+    <string name="tap_on_the_number_on_the_right_to_set_the_default_number_of_reps_count">Tap on the number on the right to set the default number of reps count</string>
+    <string name="tap_on_the_number_on_the_right_to_set_the_default_rest_time_after_each_rep">Tap on the number on the right to set the default rest time after each rep</string>
+    <string name="apply">Apply</string>
+    <string name="separator">:</string>
 </resources>
