feat: Enhance UI for Workout Setup and Google Sign-In dialogs
This commit introduces UI improvements to the Workout Setup dialog and the Google Sign-In bottom sheet.

- **Workout Setup Dialog (`dialog_workout_setup.xml`, `WorkoutSetupDialog.kt`):**
    - Added a dismiss button (cross icon) at the top of the dialog.
    - The dismiss button is a `CardView` containing an `ImageView` with `cross.xml` drawable.
    - Updated the root layout to `LinearLayout` to accommodate the dismiss button outside the main content card.
    - Added a new string resource `dismiss_dialog_box` for the content description of the dismiss button.
    - Added `cross.xml` vector drawable for the dismiss icon.

- **Google Sign-In Bottom Sheet (`bottom_sheet_google_signin.xml`):**
    - Added a drag handle (small horizontal bar) at the top of the bottom sheet for better visual indication and usability.
    - The "Continue with Google" text is now centered within its parent `ConstraintLayout` to ensure proper alignment regardless of the Google icon's presence or size.
    - Wrapped the main content in an additional `LinearLayout` to separate the drag handle from the sign-in button area.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,4 +104,5 @@
     <string name="tap_on_the_number_on_the_right_to_set_the_default_rest_time_after_each_rep">Tap on the number on the right to set the default rest time after each rep</string>
     <string name="apply">Apply</string>
     <string name="separator">:</string>
+    <string name="dismiss_dialog_box">Dismiss dialog box</string>
 </resources>
