feat: Implement shareable stats screen after workout
This commit introduces a new screen that appears after a push-up session is completed, allowing users to view and share their workout statistics.

Key Changes:

- **Navigation to Share Stats Screen:**
    - In `CounterActivity.kt`, after saving daily stats, the app now navigates to a new `ShareStatsFragment` instead of finishing the activity.
    - Workout data (total push-ups, active time, rest time) is passed as arguments to the `ShareStatsFragment`.
    - Custom animations (`slide_in_right`, `fade_out`, `fade_in`, `slide_out_right`) are used for this transition.

- **ShareStatsFragment (`ShareStatsFragment.kt`, `fragment_share_stats.xml`):**
    - This new fragment hosts a `ViewPager2` to display stats in different layouts.
    - It uses `DotsIndicator` to show the current page of the ViewPager.
    - Two buttons are provided:
        - "Home": Navigates the user back (presumably to the main screen, though the exact action is not defined in this diff).
        - "Share": Intended to trigger a share action (implementation not shown in this diff).
    - It retrieves push-up count, total time, and rest time from fragment arguments.

- **StatsPagerAdapter (`StatsPagerAdapter.kt`):**
    - A new `FragmentStateAdapter` to manage the pages within the `ShareStatsFragment`'s ViewPager.
    - It currently creates two types of fragments to display stats: `VerticalStatsFragment` and `HorizontalStatsFragment`.

- **Stats Display Fragments:**
    - **VerticalStatsFragment (`VerticalStatsFragment.kt`, `fragment_vertical_stats.xml`):**
        - Displays push-up count, total time, and rest time in a vertical layout.
        - Includes a `pushup_character.png` image.
    - **HorizontalStatsFragment (`HorizontalStatsFragment.kt`, `fragment_horizontal_stats.xml`):**
        - Displays push-up count, total time, and rest time in a more horizontal arrangement, with the image and push-up count side-by-side, and time/rest below.
    

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="back">Back</string>
     <string name="rate_us">Rate us</string>
     <string name="share_app">Share app</string>
+    <string name="share_stats">Share stats</string>
     <string name="person_email_1">davianallen1997@yahoo.com</string>
     <string name="general">General</string>
     <string name="account_information">Account Information</string>
@@ -77,7 +78,8 @@
     <string name="email">Email</string>
     <string name="skip">Skip</string>
     <string name="next">Next</string>
-    
+    <string name="home">Home</string>
+
     <!-- Onboarding strings -->
     <string name="onboarding_title_1">track your push-ups.\nanytime. anywhere.</string>
     <string name="onboarding_body_1">Build strength and consistency with a\nsmart push-up counter designed to\nkeep you motivated.</string>
@@ -88,7 +90,7 @@
     <string name="onboarding_title_4">ready to\nbegin?</string>
     <string name="onboarding_body_4">Sign in with Google to save your\nprogress and join the community.</string>
     <string name="continue_with_google">Continue with Google</string>
-    
+
     <!-- Workout Setup Dialog -->
     <string name="setup_workout">Setup Workout</string>
     <string name="total_reps">Total Reps</string>
