--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,7 +78,6 @@
     <string name="email">Email</string>
     <string name="skip">Skip</string>
     <string name="next">Next</string>
-    <string name="home">Home</string>
 
     <!-- Onboarding strings -->
     <string name="onboarding_title_1">track your push-ups.\nanytime. anywhere.</string>
@@ -107,4 +106,11 @@
     <string name="apply">Apply</string>
     <string name="separator">:</string>
     <string name="dismiss_dialog_box">Dismiss dialog box</string>
+
+    <!-- Share Stats -->
+    <string name="home">Home</string>
+    <string name="push_ups">Push Ups</string>
+    <string name="time">Time</string>
+    <string name="_0m_0s">0m 0s</string>
+    <string name="rest">Rest</string>
 </resources>
