feat: Enhance Share Stats screen UI
This commit refines the UI of the "Share Stats" screen.

Key changes:

- **Layout Adjustments (`activity_share_stats.xml`):**
    - Wrapped the `ViewPager2` and a new "Transparent" label within a `ConstraintLayout` (`id/stats`). This layout now has a transparent background (`@drawable/transparent`).
    - The "Transparent" label is a `TextView` within a `MaterialCardView`, styled with a white border and located at the top-left of the `stats` layout.
    - Adjusted margins and constraints for `ViewPager2` and `DotsIndicator` to accommodate the new layout structure.
    - The "Share" button icon (`share.xml`) has been replaced with an "Export" icon (`export.xml`), and its content description updated from "Share stats" to "Export stats".

- **Stats Fragment Layouts (`fragment_vertical_stats.xml`, `fragment_horizontal_stats.xml`):**
    - Changed root `LinearLayout` from `match_parent` to `wrap_content` for both width and height.
    - Set `layout_gravity` to `center` and added `padding="32dp"`.
    - Changed text color for all `TextView` elements to `@color/white_fix`.

- **New Drawable Resources:**
    - Added `export.xml`: A vector drawable for the export icon.
    - Added `transparent.xml`: A vector drawable providing a checkered transparent background pattern.

- **Color Resources (`colors.xml`):**
    - Added a new color `white_fix` (`#FFFFFF`).

- **String Resources (`strings.xml`):**
    - Changed `share_stats` string to `export_stats`.
    - Added a new string `transparent` for the "Transparent" label.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,7 +46,7 @@
     <string name="back">Back</string>
     <string name="rate_us">Rate us</string>
     <string name="share_app">Share app</string>
-    <string name="share_stats">Share stats</string>
+    <string name="export_stats">Export stats</string>
     <string name="person_email_1">davianallen1997@yahoo.com</string>
     <string name="general">General</string>
     <string name="account_information">Account Information</string>
@@ -113,4 +113,5 @@
     <string name="time">Time</string>
     <string name="_0m_0s">0m 0s</string>
     <string name="rest">Rest</string>
+    <string name="transparent">Transparent</string>
 </resources>
