feat: Add "How to Use" feature
This commit introduces a "How to Use" screen, accessible from the Share Stats page, which displays a series of instructional images in a ViewPager with automatic sliding.

Key Changes:

- **HowToUseFragment (`HowToUseFragment.kt`, `fragment_how_to_use.xml`):**
    - New fragment that hosts a `ViewPager2` to display instructional images (`story1.png` to `story4.png`).
    - Uses `HowToUseAdapter` to manage the images.
    - Includes a `DotsIndicator` to show the current page.
    - Images automatically slide every 3 seconds.
    - A "Back" button allows users to return to the previous screen.
- **HowToUseAdapter (`HowToUseAdapter.kt`, `item_how_to_use.xml`):**
    - RecyclerView adapter to display images in the `ViewPager2`.
    - `item_how_to_use.xml` defines the layout for each image item.
- **ShareStatsActivity (`ShareStatsActivity.kt`, `activity_share_stats.xml`):**
    - Added a "How to use?" button to the top right of the screen.
    - Clicking this button navigates to the `HowToUseFragment` with a slide-in animation.
    - Added a "Back" button to the top left.
    - Renamed the "Share" button ID to "export".
- **Drawable Resources:**
    - Added new drawable images: `story1.png`, `story2.png`, `story3.png`, `story4.png`.
- **String Resources (`strings.xml`):**
    - Added new string `how_to_use` for the button and screen title.
    - Added placeholder string `hello_blank_fragment`.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,4 +114,7 @@
     <string name="_0m_0s">0m 0s</string>
     <string name="rest">Rest</string>
     <string name="transparent">Transparent</string>
+    <string name="how_to_use">How to use?</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
