--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,13 +108,14 @@
     <string name="dismiss_dialog_box">Dismiss dialog box</string>
 
     <!-- Share Stats -->
-    <string name="home">Home</string>
     <string name="push_ups">Push Ups</string>
     <string name="time">Time</string>
     <string name="_0m_0s">0m 0s</string>
     <string name="rest">Rest</string>
     <string name="transparent">Transparent</string>
     <string name="how_to_use">How to use?</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="something_went_wrong">Something went wrong</string>
+    <string name="saved_successfully">Saved Successfully</string>
+    <string name="permission_denied">Permission Denied</string>
+    <string name="save">Save</string>
 </resources>
