feat: Display current and highest workout streaks
This commit introduces functionality to calculate and display the user's current and highest workout streaks on the dashboard.

Key changes:

- **`DashboardRepository.kt`:**
    - Added `fetchStreak()` function to calculate the current and highest streaks.
        - It fetches all daily push-up documents for the user.
        - Parses dates and sorts them.
        - Iterates through the sorted entries to find the longest sequence of consecutive days with push-ups (highest streak).
        - Calculates the current streak by checking backwards from today for consecutive days with push-ups.
        - Returns a `Pair<Int, Int>` representing (current streak, highest streak).
- **`DashboardViewModel.kt`:**
    - Added `_currentStreak` LiveData to hold the streak data (`Pair<Int, Int>`).
    - Added `loadCurrentStreak()` function to call `repository.fetchStreak()` and update `_currentStreak`.
- **`DashboardFragment.kt`:**
    - Observed `viewModel.currentStreak` to update the UI.
        - `binding.streakText` now displays the current streak count.
        - `binding.currentStreakText` displays "current - [current_streak_count]".
        - `binding.highestStreakText` displays "highest - [highest_streak_count]".
    - Calls `viewModel.loadCurrentStreak()` in `onViewCreated` and `onResume` to load/refresh streak data.
- **`fragment_dashboard.xml`:**
    - Added `android:id` attributes to TextViews related to streak display:
        - `streakText` (for the large streak number).
        - `currentStreakText` (for "current - X").
        - `highestStreakText` (for "highest - Y").
- **`strings.xml`:**
    - Added new string resources for formatting current and highest streak text:
        - `current`: "current - %1$d"
        - `highest`: "highest - %1$d"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,4 +118,6 @@
     <string name="saved_successfully">Saved Successfully</string>
     <string name="permission_denied">Permission Denied</string>
     <string name="save">Save</string>
+    <string name="current">current - %1$d</string>
+    <string name="highest">highest - %1$d</string>
 </resources>
